# AiCutting

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Start AiCutting.cmd  pyproject.toml  pysidedeploy.spec  studio.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ROADMAP.md  architecture.md  public-release-checklist.md  quickstart.md
docs/examples/: basic-config.toml
docs/superpowers/plans/: 2026-06-20-aicutting-desktop-frontend-implementation.md  2026-06-20-aicutting-mvp-implementation.md  2026-06-21-director-engine-implementation.md  2026-06-26-ai-drone-director-20-implementation.md  2026-06-26-ai-drone-director-30-implementation.md  2026-06-27-director-40-wave1.md  2026-06-28-studio-qml-rework.md  2026-06-28-studio-v2-input-live-view.md  2026-06-28-title-reveals-2.md
docs/superpowers/specs/: 2026-06-20-aicutting-desktop-frontend-design.md  2026-06-20-aicutting-mvp-design.md  2026-06-21-director-engine-design.md  2026-06-26-ai-drone-director-20-design.md  2026-06-26-ai-drone-director-30-design.md  2026-06-27-color-sequencing-cinematic-title.md  2026-06-28-studio-qml-rework-design.md  2026-06-28-title-reveals-2-design.md
src/aicutting/: __main__.py  cli.py  pipeline.py
src/aicutting/agents/: __init__.py  backends.py
src/aicutting/analysis/: audio.py  beat_plan.py  color.py  color_match.py  content_reframe.py  discovery.py  drone_shots.py  ffprobe.py  footage_meta.py  horizon.py  motion.py  reveal.py  screenshots.py  video.py
src/aicutting/core/: __init__.py  artifacts.py  errors.py  models.py  paths.py  progress.py  style.py
src/aicutting/director/: drone_models.py  edit_agent.py  edit_models.py  engine.py  location.py  models.py
src/aicutting/gui/: __init__.py  app.py  backend.py  jobs.py  live_view.py  main_window.py  qt.py  state.py  widgets.py  worker.py
src/aicutting/planning/: assemble.py  duration.py  effects.py  engine.py  hero.py  ranking.py  rhythm.py  sequence.py  story.py  transitions.py  variants.py
tests/: test_cli.py  test_cli_module.py  test_pipeline.py  test_public_docs.py  test_reveal_landing.py  test_style_presets.py  test_windows_launcher.py
tests/agents/: test_backends.py
tests/analysis/: test_audio.py  test_beat_plan.py  test_color.py  test_color_match.py  test_content_reframe.py  test_discovery.py  test_drone_shots.py  test_ffprobe.py  test_footage_meta.py  test_horizon.py  test_motion.py  test_reveal.py  test_screenshots.py  test_video.py
tests/core/: test_artifacts.py  test_models.py  test_paths.py  test_progress.py
tests/director/: test_drone_models.py  test_edit_agent.py  test_edit_models.py  test_engine.py  test_location.py  test_models.py
tests/gui/: test_app_entrypoint.py  test_backend.py  test_jobs.py  test_live_view.py  test_qml_smoke.py  test_qt_smoke.py  test_state.py
tests/planning/: test_assemble.py  test_duration.py  test_effects.py  test_engine.py  test_hero.py  test_ranking.py  test_rhythm.py  test_sequence.py  test_story.py  test_transitions.py  test_variants.py
tests/quality/: test_critic.py  test_replan.py
tests/render/: test_ffmpeg.py  test_reframe.py  test_titles.py
tests/report/: test_html_report.py
tests/resolve/: test_edl.py  test_export.py  test_fcpxml.py
tests/tui/: test_progress_view.py
(+27 files in other folders)
