[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "aicutting"
version = "3.0.0"
description = "Local AI drone-video auto-editor — beat-synced, colour-coherent cinematic cuts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GeFAA" }]
keywords = ["video-editing", "drone", "ffmpeg", "davinci-resolve", "ai"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Video",
]
dependencies = [
  "typer>=0.12.5",
  "rich>=13.9",
  "pydantic>=2.8",
  "numpy>=2.0",
  "opencv-python-headless>=4.10",
  "scenedetect[opencv]>=0.6.4",
  "librosa>=0.10.2",
  "soundfile>=0.12.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6.8",
  "mypy>=1.11",
]
gui = [
  "PySide6>=6.8",
  "pytest-qt>=4.4",
]

[project.scripts]
aicutting = "aicutting.cli:app"
aicutting-studio = "aicutting.gui.app:main_cli"

[project.urls]
Homepage = "https://github.com/GeFAA/AiCutting"
Issues = "https://github.com/GeFAA/AiCutting/issues"
Source = "https://github.com/GeFAA/AiCutting"

[tool.hatch.build.targets.wheel]
packages = ["src/aicutting"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["aicutting"]

[[tool.mypy.overrides]]
module = [
  "aicutting.gui.app",
  "aicutting.gui.main_window",
  "aicutting.gui.qt",
  "aicutting.gui.widgets",
  "aicutting.gui.worker",
]
ignore_errors = true
